# hpp-exec

./: CMakeLists.txt  README.md
hpp_exec/: __init__.py  actions.py  graph_segments.py  ros2_sender.py  segments.py
include/hpp-exec/: doc.hh
scripts/: README.md  launch_gazebo_gripper.sh
tests/: test_actions.py  test_ros2_sender.py  test_segments.py
